# fastapi-ai-starter

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  main.py  pre-commit.sh  pyproject.toml  ruff.toml  supervisord.conf  tasks.py
alembic/: env.py
alembic/versions/: 84da034da8ea_add_user_model.py
app/: __init__.py  database.py  deps.py  main.py  settings.py
app/api/: router.py  test.py  util.py
app/api/v1/: __init__.py  test.py
app/logging/: __init__.py  logger.py
app/models/: __init__.py  user.py
app/services/: base.py  deps.py  factory.py  manager.py  schema.py  util.py
app/services/auth/: factory.py  service.py  utils.py
app/services/database/: factory.py  service.py  utils.py
app/services/database/models/: __init__.py
app/services/database/models/user/: crud.py
app/services/settings/: base.py  factory.py  service.py
app/util/: concurrency.py
celery_tasks/: __init__.py  celery.py  celeryconfig.py  task_01.py
celery_tasks/workers/: task_01.py
nginx/: nginx.conf
scripts/: migration.sh
