[project]
name = "compose-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[librabbitmq]>=5.5.2",
    "fastapi[standard]>=0.115.12",
    "pre-commit>=4.2.0",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
]
